      \code{"character string"} for more consistency and less translation
      work.

      \item \code{available.packages()} and \code{install.packages()} get
      an optional switch \code{cache_user_dir}, somewhat experimentally.

      \item The \code{sunspot.month} data have been updated to Oct 2024;
      because of recalibration also historical numbers are changed, and we
      keep the previous data as \code{sunspot.m2014} for reproducibility.

      \item The \code{print()} method for date-time objects (\code{POSIX.t})
      gets an optional \code{digits} argument for \emph{fractional}
      seconds, passed to improved \code{format.POSIXlt()}; consequently,
      \code{print(<date.time>, digits = n)} allows to print fractions of
      seconds.
    }
  }

  \subsection{INSTALLATION on a UNIX-ALIKE}{
    \itemize{
      \item The minimum \command{autoconf} requirement for a maintainer
      build has been increased to \command{autoconf}\sspace{}2.72.

      \item Building the HTML (and Info) versions of the R manuals now
      requires \command{texi2any} from \I{Texinfo} 6.1 or later.

      \item Failures in building the manuals under \file{doc} now abort
      the installation, removing any file which caused the failure.
    }
  }

  \subsection{DEPRECATED AND DEFUNCT}{
    \itemize{
      \item \code{is.R()} is defunct.  Environment variable
      \env{_R_DEPRECATED_IS_R_} no longer has any effect.

      \item Deprecated (for more than 9 years!) functions
      \code{linearizeMlist}, \code{listFromMlist}, and \code{showMlist} and
      the \code{"MethodsList"} class for S4 method handling were removed
      from package \pkg{methods}.
      Deprecated functions \code{balanceMethodsList}, \code{emptyMethodsList},
      \code{inheritedSubMethodLists}, \code{insertMethod},
      \code{insertMethodInEmptyList}, \code{makeMethodsList},
      \code{mergeMethods}, \code{MethodsList}, \code{MethodsListSelect}, and